style fix for mobile spacing

--- a/civ-quotes/src/styles.css
+++ b/civ-quotes/src/styles.css
@@ -1,7 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #303030;}
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    background-color: #303030;
+}
 
 .nav-menu {
     flex: 1 1 auto;
@@ -10,11 +18,20 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-
 
 .main-toolbar {
     margin: 0;
-    width: 98% !important;
-    margin-left: 1%;
-    margin-top: 1%;
+    width: 94% !important;
+    margin-left: 3%;
+    margin-top: 3%;
     margin-bottom: 1%;
     background-color: goldenrod;
+}
+
+@media only screen and (min-width: 768px) {
+    /* For desktop: */
+    .main-toolbar {
+        margin-left: 1%;
+        margin-top: 1%;
+        width: 98% !important;
+    }
 }
 
 .toolbar-button {
@@ -28,9 +45,17 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-
 }
 
 .quote-card {
-    margin-left: 20%;
-    margin-right: 20%;
     margin-top: 1%;
+    margin-left: 3%;
+    margin-right: 3%;
+}
+
+@media only screen and (min-width: 768px) {
+    /* For desktop: */
+    .quote-card {
+        margin-left: 20%;
+        margin-right: 20%;
+    }
 }
 
 .accordion-title {
